# es6_math

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: dart.yml
example/: example.dart
lib/: es6_math.dart  es6_math_native.dart
lib/src/: math.dart  math_native.dart
native_lib/: CMakeLists.txt  Makefile
native_lib/src/: es6_math.c
test/: all_test.dart  native_test.dart
